--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "glob": "^7.2.0",
+    "ts-node": "^10.6.0",
     "tweetnacl": "^1.0.3",
     "youtube-search-api": "^1.0.11",
     "ytdl-core": "^4.9.1"
