--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "glob": "^7.2.0",
+    "lodash": "^4.17.21",
     "play-dl": "^1.8.9",
     "ts-node": "^10.6.0",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
-    "@types/glob": "^7.1.4"
+    "@types/glob": "^7.1.4",
+    "@types/lodash": "^4.14.179"
   }
 }
