--- a/config.json
+++ b/config.json
@@ -1,28 +1,1 @@
-{
-    "guilds": {
-        "790607991149166592": { "settings": { "prefix": "," } },
-        "845239085076578304": {
-            "settings": { "prefix": ["!", ",", "prosim mloude pls pls"] },
-            "playlists": {
-                "Edicek": [
-                    {
-                        "url": "https://www.youtube.com/watch?v=JGwWNGJdvx8",
-                        "name": "Ed Sheeran - Shape of You (Official Music Video)",
-                        "channelName": "Ed Sheeran",
-                        "length": "4:24",
-                        "thumbnail": "https://i.ytimg.com/vi/JGwWNGJdvx8/hqdefault.jpg?sqp=-oaymwEcCOADEI4CSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCtA7onuiJmHyjpL6XPfyW6d_fSeg"
-                    },
-                    {
-                        "url": "https://www.youtube.com/watch?v=Il0S8BoucSA",
-                        "name": "Ed Sheeran - Shivers [Official Video]",
-                        "channelName": "Ed Sheeran",
-                        "length": "3:58",
-                        "thumbnail": "https://i.ytimg.com/vi/Il0S8BoucSA/hq720.jpg?sqp=-oaymwEcCOgCEMoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCp47OJx65fO6J1dX1jrMFfEQ46ag"
-                    }
-                ]
-            }
-        },
-        "864167554757951518": { "settings": { "prefix": "," } }
-    },
-    "settings": { "prefix": "," }
-}
+{"guilds":{"790607991149166592":{"settings":{"prefix":"!"}},"845239085076578304":{"settings":{"prefix":["!",",","prosim mloude pls pls"]},"playlists":{"Edicek":[{"url":"https://www.youtube.com/watch?v=JGwWNGJdvx8","name":"Ed Sheeran - Shape of You (Official Music Video)","channelName":"Ed Sheeran","length":"4:24","thumbnail":"https://i.ytimg.com/vi/JGwWNGJdvx8/hqdefault.jpg?sqp=-oaymwEcCOADEI4CSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCtA7onuiJmHyjpL6XPfyW6d_fSeg"},{"url":"https://www.youtube.com/watch?v=Il0S8BoucSA","name":"Ed Sheeran - Shivers [Official Video]","channelName":"Ed Sheeran","length":"3:58","thumbnail":"https://i.ytimg.com/vi/Il0S8BoucSA/hq720.jpg?sqp=-oaymwEcCOgCEMoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCp47OJx65fO6J1dX1jrMFfEQ46ag"}]}},"864167554757951518":{"settings":{"prefix":","}}},"settings":{"prefix":","}}
